playground/notas_tests/valid/print-nest-02.hulk
print(print(print(2)));
