playground/notas_tests/invalid/glob-06.hulk
let x = 1 in let PI = 2 in print(PI);
